@@ -1,3 +1,9 @@
+2005-05-14  Stephen Deasey  <sdeasey@users.sf.net>
+
+	* include/Makefile.module.in: Add new MODNAME and TCL Makefile
+	variables which modules can use to specify a list of shared tcl
+	files to install.
+
 2005-05-13  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* nsd/init.tcl (_ns_sourcemodule): Module's shared tcl directory
